# rcli

./: .dir-locals.el  .pre-commit-config.yaml  AI_USAGE.md  CHANGELOG.md  Cargo.toml  README.md  README_cn.md  _typos.toml  cliff.toml  deny.toml
assets/: encrypted.txt  output_encrypted.txt  test.csv
examples/: ai_example.sh
fuxtures/: b64.txt  blacke3.txt  blake3.txt  ed25519.pk  ed25519.sk
src/: csvprocess.rs  lib.rs  main.rs  opts.rs  utils.rs
src/cli/: ai.rs  b64.rs  base64_opts.rs  csv.rs  csv_opts.rs  genpass.rs  genpass_opts.rs  http.rs  mod.rs  text.rs
src/process/: ai.rs  b64.rs  csv.rs  csv_convert.rs  gen_pass.rs  http.rs  http_serve.rs  mod.rs  text.rs
