[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
author = ["xueTr54<jinpeng.ti@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
